Fix left-aligned undefined cells

--- a/webview/src/experiments/components/Table/styles.module.scss
+++ b/webview/src/experiments/components/Table/styles.module.scss
@@ -391,7 +391,6 @@ $spinner-color-light: #000;
   .td,
   .th {
     white-space: nowrap;
-    text-align: left;
     min-width: 0;
     position: relative;
   }
